# devsecops-pygoat

./: README.md  main.py  pyproject.toml  report.json
.github/workflows/: agradecimento.yml  main.yml
modules/: filehandler.py  gamesreporter.py  logparser.py
test/: test_filehandler.py  test_gamesreporter.py  test_logparser.py
